# usb_cdc

./: .gitmodules  CMakeLists.txt  README.md  agent_readme.md  build_esp32.sh  esp32_download.sh  sdkconfig.defaults
agents_doc/: 01-可行性分析.md  02-方案简述.md  03-UART方案详解.md  04-架构设计文档.md  05-测试文档.md  06-COM代理方案.md
main/: CMakeLists.txt  board_lcd_pins.h  main.c  tusb_serial_device_main.c  usb_cdc_bridge.h
source/drivers/LCD35/: CMakeLists.txt
source/drivers/LCD35/adapter/: delay_adapter.h  gpio_adapter.h  spi_adapter.h  storage_adapter.h
source/drivers/LCD35/adapter/esp32/: delay_adapter_esp32.c  gpio_adapter_esp32.c  spi_adapter_esp32.c  storage_adapter_nvs.c
source/drivers/LCD35/core/: lcd_core.c  lcd_core.h  lcd_driver.c  lcd_font.c  lcd_font_data.inc  touch_core.c  touch_core.h  touch_driver.c
source/drivers/LCD35/hal/: lcd_hal.h  touch_hal.h
source/drivers/LCD35/hal/esp32/: lcd_hal_esp32.c  touch_hal_esp32.c
source/drivers/LCD35/include/: lcd_config.h  lcd_driver.h  lcd_font.h  touch_config.h  touch_driver.h
source/drivers/Uart_learn/: CMakeLists.txt  uart_learn.c  uart_learn.h
tools/com_proxy/: README.md  __init__.py  agent.py  com_proxy.ini  config.py  main.py  models.py  template_builder.py
tools/com_proxy/tests/: conftest.py  test_template_builder.py
